--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 1
+  number: 2
 
   script: python setup.py install --single-version-externally-managed --record record.txt
 
@@ -23,7 +23,7 @@ requirements:
 
   run:
     - python
-    - pyqt
+    - pyqt 5.6.*
 
 test:
   imports:
